--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public -m \"Updates --skip-ci\""
+    "deploy": "gatsby build --prefix-paths && echo fjs-fire.com > ./public/CNAME && gh-pages -d public -m \"Updates --skip-ci\""
   },
   "dependencies": {
     "gatsby": "^5.0.0",
+    "gatsby-plugin-canonical-urls": "^5.2.0",
+    "gatsby-plugin-google-gtag": "^5.2.0",
     "gatsby-plugin-manifest": "^5.0.0",
     "gatsby-plugin-offline": "^6.0.0",
+    "gatsby-plugin-react-helmet": "^6.2.0",
     "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-sitemap": "^6.0.0",
     "gatsby-source-filesystem": "^5.0.0",
@@ -29,7 +32,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
-    "gatsby-plugin-postcss": "^6.0.0",
+    "gatsby-plugin-postcss": "^6.2.0",
     "gh-pages": "^4.0.0",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
