--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "gatsby-plugin-react-helmet": "^6.2.0",
     "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-sitemap": "^6.0.0",
+    "gatsby-remark-prismjs": "^7.8.0",
+    "gatsby-remark-prismjs-title": "^1.0.0",
     "gatsby-source-filesystem": "^5.0.0",
     "gatsby-transformer-csv": "^5.0.0",
     "gatsby-transformer-json": "^5.0.0",
+    "gatsby-transformer-remark": "^6.8.0",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.8",
     "react-dom": "^18.2.0",
