--- a/package.json
+++ b/package.json
@@ -14,25 +14,32 @@
     "deploy": "gatsby build --prefix-paths && echo fjs-fire.com > ./public/CNAME && gh-pages -d public -m \"Updates --skip-ci\""
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^2.1.3",
     "gatsby": "^5.0.0",
+    "gatsby-plugin-breakpoints": "^1.3.10",
     "gatsby-plugin-canonical-urls": "^5.2.0",
+    "gatsby-plugin-fix-fouc": "^1.0.3",
     "gatsby-plugin-google-gtag": "^5.2.0",
     "gatsby-plugin-manifest": "^5.0.0",
     "gatsby-plugin-offline": "^6.0.0",
     "gatsby-plugin-react-helmet": "^6.2.0",
     "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-sitemap": "^6.0.0",
-    "gatsby-remark-prismjs": "^7.8.0",
+    "gatsby-plugin-styled-components": "^6.10.0",
+    "gatsby-remark-prismjs": "^7.10.0",
     "gatsby-remark-prismjs-title": "^1.0.0",
+    "gatsby-remark-responsive-iframe": "^6.10.0",
     "gatsby-source-filesystem": "^5.0.0",
     "gatsby-transformer-csv": "^5.0.0",
     "gatsby-transformer-json": "^5.0.0",
-    "gatsby-transformer-remark": "^6.8.0",
+    "gatsby-transformer-remark": "^6.10.0",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.8",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-safe": "^1.3.0",
+    "styled-components": "^5.3.10"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
