--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gatsby-transformer-csv": "^5.0.0",
     "gatsby-transformer-json": "^5.0.0",
     "gatsby-transformer-remark": "^6.10.0",
+    "github-markdown-css": "^5.2.0",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-burger-menu": "^3.0.8",
